# arm9

./: Cargo.toml  README.md  memory.x
arm9/: Cargo.toml  README.md
arm9-rt/: Cargo.toml  README.md  build.rs  link.x.in
arm9-rt/macros/: Cargo.toml
arm9-rt/macros/src/: lib.rs
arm9-rt/src/: lib.rs
arm9-semihosting/: Cargo.toml  README.md
arm9-semihosting/src/: lib.rs
arm9/src/: asm.rs  atomic.rs  critical_section_impl.rs  interrupt.rs  lib.rs  register.rs
arm9/src/register/: cpsr.rs
panic-semihosting/: Cargo.toml
panic-semihosting/src/: lib.rs
