[package]
authors = [
    "The Cortex-M Team <cortex-m@teams.rust-embedded.org>",
    "Jorge Aparicio <jorge@japaric.io>",
]
categories = ["no-std", "embedded"]
description = "Report panic messages to the host stderr using semihosting"
documentation = "https://docs.rs/panic-semihosting"
keywords = ["panic-handler", "panic-impl", "panic", "semihosting"]
license = "MIT OR Apache-2.0"
name = "panic-semihosting"
repository = "https://github.com/rust-embedded/cortex-m"
version = "0.6.0"
rust-version = "1.61"
edition = "2021"

[dependencies]
arm9 = { path = "../arm9", version = "0.7.7" }
arm9-semihosting = { path = "../arm9-semihosting", version = ">= 0.5.0, < 0.6" }

[features]
exit = []
jlink-quirks = ["arm9-semihosting/jlink-quirks"]

[package.metadata.docs.rs]
targets = ["armv5te-none-eabi"]
